# osmptparser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: workflow.yml
src/: bin.rs
src/parser/: mod.rs  relation.rs
tests/: integration_test.rs
webapp/: analyzer.js  app.js  index.html  style.css
