[package]
name = "osmptparser"
description = "Openstreetmap Public Transport Parser"
version = "2.2.0"
authors = ["Julian Perelli <jperelli@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
name = "osmptparser"
crate-type = ["rlib", "cdylib"]

[dependencies]
# osm_pbf_iter = { path = "../rust-osm-pbf-iter" }
# osm_pbf_iter = { git = "https://github.com/astro/rust-osm-pbf-iter", rev="a7849efd7ac33768f0e982879ca1c6acc3ff82a6" }
osm_pbf_iter = "0.2.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
num_cpus = "1.16.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.127"

[[example]]
name = "main"
path = "src/example.rs"

[[bin]]
name = "osmptparser"
path = "src/bin.rs"
